--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Portfolio website displaying work and information about Leandro Carvalho" />
-
+  <style>
+    * {
+      font-family: 'Azeret Mono', sans-serif;
+    }
+  </style>
   <title>Leandro Carvalho</title>
 </head>
 
