Makes text and style changes

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       font-family: 'Azeret Mono', sans-serif;
     }
   </style>
-  <title>Leandro Carvalho</title>
+  <title>{ Leandro Carvalho }</title>
 </head>
 
 <body>
