Changes project bio paragraph

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta property="og:image" content="%PUBLIC_URL%/LC-logo.png"/> 
   <meta name="description" content="Portfolio website displaying work and information about Leandro Carvalho" />
   <style>
     * {
