--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <meta name="theme-color" content="#000000" />
   <meta property="og:image" content="%PUBLIC_URL%/LC-logo.png"/> 
   <meta name="description" content="Portfolio website displaying work and information about Leandro Carvalho" />
+  <meta property="og:image" content="LC-logo" />
   <style>
     * {
       font-family: 'Azeret Mono', sans-serif;
